Swap deprecated Swashbuckle for new dotnet OpenAPI. Swap Swashbuckle UI with Scalar. Add auth.
